--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,4 +21,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo This is run on $GITHUB_HEAD_REF
+        run: echo This is run on ${{ github.head_ref }}
